--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
 	<title>Ace Biography</title>
 </head>
-
-
 <body>
-	<h1>Ace's Basis Website</h1>
-	<p>Hi, my name is <strong>Ace</strong>, and welcome to my <em>Bio Website</em></p>
-
+	<h1>Ace's Basic Website</h1>
+	<p>Konichiwa, my name is <strong>Ace</strong>, and welcome to my <em>Bio Website</em></p>
 	<hr>
 
 	<h2>Some Info About Me</h2>
-
 	<img src="ace.jpg" width="300px">
 
 	<table>
@@ -37,7 +33,7 @@
 
 	<h4>Occupation</h4>
 	<ul>
-		<li>Second Division Commader - <strong>Whitebeard Pirates</strong></li>
+		<li>Second Divison Commader - <strong>Whitebeard Pirates</strong></li>
 		<li>Captain (Former)- <strong>Spade Pirates</strong></li>
 	</ul>
 
@@ -60,7 +56,7 @@
 			<input type="text" name="fullname" placeholder="Ace" size="27"><br><br>
 
 			<label for="email">Email Address</label>
-			<input type="email" name="email" placeholder="Email" size="27"><br><br>
+			<input type="email" name="email" placeholder="Email" size="27" required><br><br>
 
 			<label for="message">Your Question</label><br>
 			<textarea rows="3" cols="43"></textarea><br>
